--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "axios": "^1.10.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-dropzone": "^14.3.8"
+        "react-dropzone": "^14.3.8",
+        "react-icons": "^5.5.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.23",
@@ -19,7 +20,7 @@
         "@vitejs/plugin-react": "^4.6.0",
         "autoprefixer": "^10.4.21",
         "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.11",
+        "tailwindcss": "^3.4.17",
         "typescript": "^5.8.3",
         "vite": "^7.0.0"
     },
@@ -32,7 +33,7 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "type": "commonjs",
+    "type": "module",
     "bugs": {
         "url": "https://github.com/galofa/minecraft-mod-downloader-frontend/issues"
     },
