--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
         "@tailwindcss/vite": "^4.1.11",
         "@vercel/analytics": "^1.5.0",
         "axios": "^1.10.0",
+        "clsx": "^2.1.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-dropzone": "^14.3.8",
-        "react-icons": "^5.5.0"
+        "react-icons": "^5.5.0",
+        "react-router-dom": "^6.30.1",
+        "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
         "@types/react": "^18.3.23",
         "@types/react-dom": "^18.3.7",
+        "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^4.6.0",
         "autoprefixer": "^10.4.21",
         "postcss": "^8.5.6",
