--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.1.11",
         "@vercel/analytics": "^1.5.0",
         "axios": "^1.10.0",
         "clsx": "^2.1.1",
@@ -19,13 +18,16 @@
         "tailwind-merge": "^3.3.1"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.13",
+        "@tailwindcss/vite": "^4.1.13",
         "@types/react": "^18.3.23",
         "@types/react-dom": "^18.3.7",
         "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^4.6.0",
         "autoprefixer": "^10.4.21",
         "postcss": "^8.5.6",
-        "tailwindcss": "^3.4.17",
+        "tailwind-scrollbar": "^4.0.2",
+        "tailwindcss": "^4.1.13",
         "typescript": "^5.8.3",
         "vite": "^7.0.0"
     },
